<resources>
    <string name="app_name">TestCaseEffectiveMobile</string>
    <string name="fake_address">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="tools">Tools</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="see_all">see all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best seller</string>
    <string name="explorer">Explorer</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_details">Product Details</string>
    <string name="size">Size</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="my_cart">My Cart</string>
    <string name="add_address">Add address</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="hot_new">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_4_5_to_5_5_inches">4.5 to 5.5 inches</string>

    <string-array name="brands">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Apple</item>
    </string-array>

    <string-array name="prices">
        <item>#0 - $999</item>
        <item>#1000 - $1999</item>
        <item>#2000 - $2999</item>
        <item>#3000 - $3999</item>
        <item>#4000 - $4999</item>
        <item>#5000 - $5999</item>
        <item>#6000 - $6999</item>
        <item>#7000 - $7999</item>
        <item>#8000 - $8999</item>
        <item>#9000 - $10000</item>
    </string-array>

</resources>